Конец партии, снос ЦУ, прокрутка рынка, 4–10 карт рынка, супер-задание №10 (решения 25.09, вечер)
- Мгновенные победы: второе уничтожение любого ЦУ (втроём и вчетвером) и
  вершины всех трёх треков; вершину занимает сколько угодно игроков.
- Конец с подсчётом: истощены все тайлы зарождения или кончились карты рынка.
- Снос своего ЦУ: без монеты, модуль блокировки боя уходит сопернику; нет
  модуля — сносить нельзя.
- Обновление карты рынка кладёт её под низ колоды.
- Число карт рынка на партию — от 4 до 10, в «Штабе» и в реплее.
- Супер-задание №10: добытчик / военное здание или ЦУ на секторе с контейнером.
- Свод, движок, книга, журнал решений, тесты.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>